--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -25,49 +25,50 @@
 }
 
 #window {
-    width: 500px;
-    margin-top: 50px;
-    background-color: rgb(81, 76, 76);
-    color: #fff;
+    width: 25vw;
+    margin-top: 15;
+    background-color: #F5EEE6;
+    color: rgb(11, 10, 10);
     padding: 15px;
-    border-radius: 20px;
-    box-shadow: 0 0 5px black;
+    box-shadow: 0 0 0px black;
 }
 
 .swapbox_select {
     width: 70%;
     float: left;
+    z-index: 2;
+    
 }
 
 .swapbox {
     overflow: auto;
-    margin: 20px 0;
-    padding: 20px;
-    background-color: #2f2f2f;
-    border-radius: 20px;
-    border: 1px solid #565656;
+    margin: 0 0;
+    padding: 10px;
+    background-color: #F5EEE6;
 }
-
+.account{
+    background: linear-gradient(90deg, rgba(2,0,36,0.1699054621848739) 0%, rgba(171,230,232,1) 34%, rgba(0,212,255,0.02984943977591037) 100%);
+}
 .token_select {
-    padding: 5px 0;
-    width: 30%;
+    margin-top: 4vh;
+    width: 10%;
+    display:flex;
+    flex-direction: row;  
+   
 }
 
-.token_select:hover {
-    background-color: #464646;
-    cursor: pointer;
-}
 
 .token_row {
     padding: 5px 10px;
 }
 
 .token_img {
-    height: 30px;
+    height: 25px;
 }
 
 .token_text {
-    padding: 10px;
+    padding: 3px;
+    font-weight: bold;
 }
 
 .token_row:hover {
@@ -112,5 +113,6 @@
 
     .token_img {
         height: 25px;
+        margin-left: 50%;
     }
 }
