--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -31,6 +31,9 @@
     color: rgb(11, 10, 10);
     padding: 15px;
     box-shadow: 0 0 0px black;
+    border: 2px solid white;
+    border-radius: 10px;
+
 }
 
 .swapbox_select {
@@ -45,6 +48,7 @@
     margin: 0 0;
     padding: 10px;
     background-color: #F5EEE6;
+    
 }
 .account{
     background: linear-gradient(90deg, rgba(2,0,36,0.1699054621848739) 0%, rgba(171,230,232,1) 34%, rgba(0,212,255,0.02984943977591037) 100%);
